# limp

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/audit/: admin.py  middleware.py  models.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/core/: handlers.py  models.py  renderers.py  tasks.py  test_health.py  views.py
backend/apps/documents/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/documents/migrations/: 0001_initial.py  0002_initial.py  0003_identitydocument.py
backend/apps/documents/tests/: README.md  test_kyc.py  test_models.py  test_serializers.py  test_services.py  test_views.py
backend/apps/geography/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/geography/migrations/: 0001_initial.py
backend/apps/land/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/legal/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/revenue/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/tasks/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/telemetry/: models.py  tasks.py
backend/apps/users/: admin.py  keycloak.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/config/: api_v1_urls.py  celery.py  urls.py
backend/config/settings/: base.py  development.py  production.py
backend/scripts/: audit_kafka_consumer.py
(+61 files in other folders)
